@@ -100,6 +100,13 @@ if (isset($_REQUEST['links']) || isset($_REQUEST['nolinks'])) {
 
 $nocalculations = get_request('nocalculations', false);
 if ($nocalculations) {
+	foreach ($map['selements'] as $selement) {
+		if ($selement['elementtype'] != SYSMAP_ELEMENT_TYPE_IMAGE) {
+			add_elementNames($map['selements']);
+			break;
+		}
+	}
+
 	// get default iconmap id to use for elements that use icon map
 	if ($map['iconmapid']) {
 		$iconMaps = API::IconMap()->get(array(
@@ -137,6 +144,8 @@ if ($nocalculations) {
 	$allLinks = true;
 }
 else {
+	add_triggerExpressions($map['selements']);
+
 	$areas = populateFromMapAreas($map);
 	$map_info = getSelementsInfo($map);
 	processAreasCoordinates($map, $areas, $map_info);
